--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CRM</title>
+  <title>XXX系统</title>
 </head>
 
 <body style="height: 100%; min-width: 1200px">
